{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 85,
  "lineage": "50dbe6e2-d803-7730-6ec9-c815bbb702d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:692859945514:loadbalancer/app/production-alb-production/20d9123af6f0fd78",
            "arn_suffix": "app/production-alb-production/20d9123af6f0fd78",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "production-alb-production-2008378187.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:692859945514:loadbalancer/app/production-alb-production/20d9123af6f0fd78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-alb-production",
            "preserve_host_header": false,
            "security_groups": [
              "sg-060365a61a3da523a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b46d986d8555342"
              },
              {
                "subnet_id": "subnet-0b3e7bb241fb90509"
              }
            ],
            "subnets": [
              "subnet-05b46d986d8555342",
              "subnet-0b3e7bb241fb90509"
            ],
            "vpc_id": "vpc-0f66f11303d08abda",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_default_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:692859945514:listener/app/production-alb-production/20d9123af6f0fd78/00f25a0bb23020da",
            "certificate_arn": "arn:aws:acm:us-east-1:692859945514:certificate/5c4cfa84-41a4-40fa-82bb-bfd5a47a60e8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:692859945514:targetgroup/targetgroup-production/e747467dffa4e83b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:692859945514:listener/app/production-alb-production/20d9123af6f0fd78/00f25a0bb23020da",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:692859945514:loadbalancer/app/production-alb-production/20d9123af6f0fd78",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.alb_certificate",
            "aws_acm_certificate_validation.alb_certificate",
            "aws_alb.alb",
            "aws_alb_target_group.service_target_group",
            "aws_route53_record.generic_certificate_validation",
            "aws_route53_zone.service",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:692859945514:targetgroup/targetgroup-production/e747467dffa4e83b",
            "arn_suffix": "targetgroup/targetgroup-production/e747467dffa4e83b",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/api/healthcheck/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:692859945514:targetgroup/targetgroup-production/e747467dffa4e83b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:692859945514:loadbalancer/app/production-alb-production/20d9123af6f0fd78"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "targetgroup-production",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:internet-gateway/igw-004a5f1b8488cf3e9",
            "id": "igw-004a5f1b8488cf3e9",
            "owner_id": "692859945514",
            "tags": {
              "Name": "production_internet_way_production"
            },
            "tags_all": {
              "Name": "production_internet_way_production"
            },
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0249fd234775eee67",
            "original_route_table_id": "rtb-057fc7fdad7fbb4dd",
            "route_table_id": "rtb-0cba5bdda56078a66",
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:route-table/rtb-0cba5bdda56078a66",
            "id": "rtb-0cba5bdda56078a66",
            "owner_id": "692859945514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004a5f1b8488cf3e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production_public_route_table_production"
            },
            "tags_all": {
              "Name": "production_public_route_table_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e8ebc8a15418d1d",
            "route_table_id": "rtb-0cba5bdda56078a66",
            "subnet_id": "subnet-05b46d986d8555342"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01448be1e30448a6e",
            "route_table_id": "rtb-0cba5bdda56078a66",
            "subnet_id": "subnet-0b3e7bb241fb90509"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:security-group/sg-060365a61a3da523a",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060365a61a3da523a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming https trafic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "production_alb_security_group_production",
            "name_prefix": "",
            "owner_id": "692859945514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production_alb_security_group_production"
            },
            "tags_all": {
              "Name": "production_alb_security_group_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "batch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:security-group/sg-0b6f529e6934964e2",
            "description": "Security Groupe for Batch",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6f529e6934964e2",
            "ingress": [],
            "name": "production_batch_production",
            "name_prefix": "",
            "owner_id": "692859945514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production_batch_production"
            },
            "tags_all": {
              "Name": "production_batch_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_container_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:security-group/sg-0b1364bc7d00f3535",
            "description": "Security group for ECS task running on Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1364bc7d00f3535",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ingress traffic from ALB on HTTP only",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060365a61a3da523a"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "production_ecs_task_security_group_production",
            "name_prefix": "",
            "owner_id": "692859945514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production_ecs_task_security_group_production"
            },
            "tags_all": {
              "Name": "production_ecs_task_security_group_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:security-group/sg-05408f440732212ca",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05408f440732212ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20240914134328834700000001",
            "name_prefix": "terraform-",
            "owner_id": "692859945514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production_rds_postgres_security_group_production"
            },
            "tags_all": {
              "Name": "production_rds_postgres_security_group_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:subnet/subnet-020924b5dca26fc76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020924b5dca26fc76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692859945514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production_private_subnet_0_production"
            },
            "tags_all": {
              "Name": "production_private_subnet_0_production"
            },
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:subnet/subnet-0a30b86cbf6897cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30b86cbf6897cef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692859945514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production_private_subnet_1_production"
            },
            "tags_all": {
              "Name": "production_private_subnet_1_production"
            },
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:subnet/subnet-05b46d986d8555342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b46d986d8555342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692859945514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production_public_subnet_0_production"
            },
            "tags_all": {
              "Name": "production_public_subnet_0_production"
            },
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:subnet/subnet-0b3e7bb241fb90509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3e7bb241fb90509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692859945514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production_public_subnet_1_production"
            },
            "tags_all": {
              "Name": "production_public_subnet_1_production"
            },
            "vpc_id": "vpc-0f66f11303d08abda"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692859945514:vpc/vpc-0f66f11303d08abda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08de3a03f9f093a23",
            "default_route_table_id": "rtb-0cba5bdda56078a66",
            "default_security_group_id": "sg-0f266220e08b69c9b",
            "dhcp_options_id": "dopt-0f73eed8158b12371",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f66f11303d08abda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cba5bdda56078a66",
            "owner_id": "692859945514",
            "tags": {
              "Name": "production_vpc_production"
            },
            "tags_all": {
              "Name": "production_vpc_production"
            }
          }
        }
      ]
    }
  ]
}